[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pricing_model"
version = "1.0.0"
dependencies = [
    "numpy",
    "matplotlib",
    'importlib-metadata; python_version<"3.8"',
]

[tool.setuptools.packages.find]
#where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["pricing_models"]  # package names should match these glob patterns (["*"] by default)
#exclude = ["my_package.tests*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[project.scripts]
binomial = "pricing_models.__main__:run"