[project]
name = "JustPython"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "matplotlib",
    "pandas",
    "statsmodels",
    "scipy",
    "scikit-learn",
    "jupyter",
    "ipykernel",
    "ipywidgets",
    "ISLP"
]